# vigil

./: docker-compose.yml
config/searxng/: settings.yml
core/: database.py  middleware.py
routes/: agent_routes.py  auth_routes.py  gallery_routes.py  memory_routes.py  search_routes.py  task_routes.py
src/: agent_runs.py  mcp_manager.py  memory.py  model_discovery.py  prompt_security.py  rag_manager.py  research_handler.py  task_scheduler.py  tool_implementations.py
static/: style.css
static/js/: init.js  models.js  settings.js
vigil/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
vigil/core/: auth.py  config.py  constants.py  exceptions.py
vigil/routes/: document_routes.py  model_routes.py  note_routes.py  research_routes.py  session_routes.py
vigil/src/: agent_loop.py  chat_processor.py  deep_research.py  embeddings.py  memory_vector.py  tool_execution.py  tool_schemas.py
vigil/static/: app.js  index.html  manifest.json
vigil/static/js/: chat.js  sessions.js  settings.js
