[project]
name = "vigil"
version = "0.1.0"
description = "Vigil AI Workspace - Self-hosted AI with FastAPI + Vanilla JS + SQLite + ChromaDB + SearXNG"
authors = [
    { name = "Manus AI", email = "ai@manus.im" }
]
dependencies = [
    "fastapi~=0.111.0",
    "uvicorn[standard]~=0.30.1",
    "sqlalchemy~=2.0.30",
    "pydantic-settings~=2.3.4",
    "python-jose[cryptography]~=3.3.0",
    "passlib[bcrypt]~=1.7.4",
    "pyotp~=2.9.0",
    "httpx~=0.27.0",
    "slowapi~=0.1.9",
    "chromadb~=0.5.3",
    "fastembed~=0.2.7",
    "python-dotenv~=1.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/manus-ai/vigil"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
